--- a/main.ipynb
+++ b/main.ipynb
@@ -44,20 +44,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "W celu przeprowadzenia eksperymentu, tworzymy algorytm symulujący asymetryczną wędrówke losową wzdłuż osi liczbowej (def random_walk_symulation_1d). Parametry które funkcja przyjmuje pdoczas wywołania to:\n",
-    "N -  liczba kroków w wędrówce\n",
-    "p -  prawodpodobieństwo na ruch w górę \n",
-    "M - liczba trajektorii przeprowadzanych podczas symluacji\n",
+    "## Opis symulacji wędrówki losowej w 1D\n",
     "\n",
-    "Dane ze wszystkich trajektorii przechowujemy w liście \"trajectories\" którą iniciujemy na początku funkcji, następnie tworzymy pętle \"for\" która tworzy nam \"M\" trajektorii. Każda z nich składa się z \"N\" losowo wygenerowanych kroków ( steps = np.random.choice([1,-1], size=N, p=[p,1-p]) ), gdzie prawdopodobieństwo pójścia w górę wynosi \"p\" a w dół \"1-p\".\n",
-    "Aby obliczyć poszczególną trajektorię wstawiamy 0 na początku tablicy \"steps\" ( np.insert(steps, 0, 0) ), co reprezentuje start wędrówki w punkcie x0=0, a następnie obliczamy skumulowaną sumę kroków \n",
-    "(np.cumsum(np.insert(steps, 0, 0)) ), aby otrzymać trajektorię ruchu. Pętla kończy się dodaniem poszczególnych trajektorii do listy przy użyciu funkcji \"append\".\n",
+    "W celu przeprowadzenia eksperymentu, tworzymy algorytm symulujący asymetryczną wędrówkę losową wzdłuż osi liczbowej. Funkcja `random_walk_simulation_1d` przyjmuje następujące parametry:\n",
     "\n",
-    "W celu uzyskania uśrednionej ścieżki spośród wsystkich trajektorii, przekształcamy listę \"trajectories\" na tablice numpy i przypisujemy ją do zmiennej all_positions. Następnie obliczamy średnią pozycję dla każdego kroku wszystkich trajektorii ( avg_positions = np.mean(all_positions, axis=0) ), (axis=0, średnia kolumn tablicy). \n",
+    "- `N` - liczba kroków w wędrówce,\n",
+    "- `p` - prawdopodobieństwo ruchu w górę (wartość z zakresu \\(0 \\leq p \\leq 1\\)),\n",
+    "- `M` - liczba trajektorii generowanych podczas symulacji.\n",
     "\n",
-    "W kolejnym kroku tworzymy listę pozycji końcowych dla każdej trajektorii ( [trajectory[-1] for trajectory in trajectories] ), a następnie pobieramy wartość pozycji końcowej dla uśrednionej trajektorii (avg_final_position=avg_positions[-1] ).\n",
+    "### Główne kroki algorytmu\n",
     "\n",
-    "Następnie tworzyme wykres na którym ukazujemy graficznie przebieg naszych wędrówek, wraz z ilością kroków (N), prawodopodobieństwem (p), oraz liczbą symulacji (M) i legendą pozwalającą nam rozróżnić poszczególne trajektorie oraz ich punkty końcowe. \n",
+    "1. **Inicjalizacja danych**:\n",
+    "   - Wszystkie dane trajektorii są przechowywane w liście `trajectories`, którą inicjujemy na początku funkcji.\n",
+    "\n",
+    "2. **Generowanie trajektorii**:\n",
+    "   - Algorytm wykonuje pętlę `for`, która tworzy `M` trajektorii. Każda trajektoria składa się z `N` losowo wygenerowanych kroków:\n",
+    "     ```python\n",
+    "     steps = np.random.choice([1, -1], size=N, p=[p, 1-p])\n",
+    "     ```\n",
+    "     - Ruch w górę (wartość `1`) ma prawdopodobieństwo `p`, a ruch w dół (wartość `-1`) – prawdopodobieństwo `1-p`.\n",
+    "\n",
+    "3. **Obliczanie trajektorii**:\n",
+    "   - Aby obliczyć poszczególną trajektorię, na początku tablicy `steps` wstawiamy wartość `0`, co reprezentuje start wędrówki w punkcie \\(x_0 = 0\\):\n",
+    "     ```python\n",
+    "     np.insert(steps, 0, 0)\n",
+    "     ```\n",
+    "   - Następnie obliczamy skumulowaną sumę kroków:\n",
+    "     ```python\n",
+    "     np.cumsum(np.insert(steps, 0, 0))\n",
+    "     ```\n",
+    "     - Dzięki temu uzyskujemy ścieżkę ruchu.\n",
+    "\n",
+    "4. **Zapis wyników**:\n",
+    "   - Każda wygenerowana trajektoria jest dodawana do listy `trajectories`.\n",
+    "\n",
+    "5. **Obliczanie uśrednionej trajektorii**:\n",
+    "   - W celu uzyskania uśrednionej ścieżki spośród wszystkich trajektorii, przekształcamy listę `trajectories` na tablicę numpy i przypisujemy ją do zmiennej `all_positions`:\n",
+    "     ```python\n",
+    "     all_positions = np.array(trajectories)\n",
+    "     ```\n",
+    "   - Następnie obliczamy średnią pozycję dla każdego kroku wszystkich trajektorii:\n",
+    "     ```python\n",
+    "     avg_positions = np.mean(all_positions, axis=0)\n",
+    "     ```\n",
+    "     - Używamy parametru `axis=0`, aby obliczyć średnią dla kolumn tablicy.\n",
+    "\n",
+    "6. **Obliczanie pozycji końcowych**:\n",
+    "   - Tworzymy listę pozycji końcowych dla każdej trajektorii:\n",
+    "     ```python\n",
+    "     final_positions = [trajectory[-1] for trajectory in trajectories]\n",
+    "     ```\n",
+    "   - Następnie pobieramy wartość pozycji końcowej dla uśrednionej trajektorii:\n",
+    "     ```python\n",
+    "     avg_final_position = avg_positions[-1]\n",
+    "     \n",
+    "### Wizualizacja wyników\n",
+    "\n",
+    "Funkcja rysuje wykres, na którym przedstawione są wszystkie wygenerowane trajektorie. Dodatkowo wyświetla średnią pozycję końcową, wszystkie pozycje końcowe trajektorii oraz legendę. \n",
     "\n",
     "Pod wykresem przedstawiamy dokładne miejsc w których poszczególne trajektorię zakończył wędrówkę, oraz finalny punkt końcowy uśrednionej trajektorii."
    ]
@@ -641,96 +684,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Punkt 4:\n",
-    "• Jak zmienia się średnia pozycja oraz rozkład pozycji końcowych dla różnych wartości p?\n",
+    "## Podsumowanie\n",
     "\n",
-    "Analizując powyższe wykresy oraz wartości, można zauważyć że w zależności od wartosci p wartości średnich pozycji końcowych wędrówek klasyfikują się pewnych przedziałach niezależnie od ilości kroków (N). Ujmując to bardziej matematycznie, średnia pozycja końcowa dla poszczególnych p w zależności od N wygląda następująco:\n",
+    "### Punkt 4: Jak zmienia się średnia pozycja oraz rozkład pozycji końcowych dla różnych wartości \\( p \\)?\n",
     "\n",
-    "• dla p = 0.025 :\n",
+    "**Analiza wykresów i danych liczbowych:**\n",
     "\n",
-    "N = 100 F_avg_p = -94.6\n",
+    "- Średnie wartości pozycji końcowych wędrówek są zależne od parametru \\( p \\), ale pozostają w pewnych przedziałach niezależnie od liczby kroków \\( N \\).  \n",
+    "- Oto średnie wartości pozycji końcowych dla różnych parametrów \\( p \\) i \\( N \\):\n",
     "\n",
-    "N = 50 F_avg_p = -48.2\n",
+    "#### Średnie pozycje końcowe:\n",
+    "- **Dla \\( p = 0.025 \\):**  \n",
+    "  - \\( N = 100 \\): \\( F_{avg_p} = -94.6 \\)  \n",
+    "  - \\( N = 50 \\): \\( F_{avg_p} = -48.2 \\)  \n",
+    "  - \\( N = 10 \\): \\( F_{avg_p} = -9.6 \\)  \n",
     "\n",
-    "N = 10 F_avg_p = -9.6\n",
+    "- **Dla \\( p = 0.05 \\):**  \n",
+    "  - \\( N = 100 \\): \\( F_{avg_p} = -89.4 \\)  \n",
+    "  - \\( N = 50 \\): \\( F_{avg_p} = -45.0 \\)  \n",
+    "  - \\( N = 10 \\): \\( F_{avg_p} = -8.8 \\)  \n",
     "\n",
+    "- **Dla \\( p = 0.1 \\):**  \n",
+    "  - \\( N = 100 \\): \\( F_{avg_p} = -80.2 \\)  \n",
+    "  - \\( N = 50 \\): \\( F_{avg_p} = -41.0 \\)  \n",
+    "  - \\( N = 10 \\): \\( F_{avg_p} = -8.2 \\)  \n",
     "\n",
-    "• dla p = 0.05 :\n",
+    "### Normalizacja wyników:\n",
+    "Dzieląc średnie pozycje końcowe przez liczbę kroków \\( N \\), uzyskujemy znormalizowane wartości:  \n",
     "\n",
-    "N = 100 F_avg_p = -89.4\n",
+    "- **Dla \\( p = 0.025 \\):**  \n",
+    "  - \\( F_{avg_p} = -0.946 \\), \\( -0.964 \\), \\( -0.960 \\)  \n",
     "\n",
-    "N = 50 F_avg_p = -45.0\n",
+    "- **Dla \\( p = 0.05 \\):**  \n",
+    "  - \\( F_{avg_p} = -0.894 \\), \\( -0.890 \\), \\( -0.880 \\)  \n",
     "\n",
-    "N = 10 F_avg_p = -8.8\n",
+    "- **Dla \\( p = 0.1 \\):**  \n",
+    "  - \\( F_{avg_p} = -0.802 \\), \\( -0.820 \\), \\( -0.820 \\)  \n",
     "\n",
+    "**Obserwacje:**  \n",
+    "- Średnie wartości pozycji końcowych dla są skoncentrowane wokół zbliżonych warotści w zależności od wielkości \\( p \\)\n",
     "\n",
-    "• dla p = 0.1 :\n",
+    "### Rozkład pozycji końcowych:\n",
+    "Rozkład dla różnych wartości \\( p \\) i \\( N \\) charakteryzuje się następującymi cechami:  \n",
     "\n",
-    "N = 100 F_avg_p = -80.2\n",
+    "- **Dla \\( p = 0.025 \\):**  \n",
+    "  - Dla \\( N = 100 \\): rozkład jest przesunięty w stronę wartości bliskich \\( -100 \\).  \n",
+    "    Wysokie prawdopodobieństwo zakończenia wędrówki w tym zakresie wynika z małego \\( p \\).  \n",
+    "  - Dla \\( N = 50 \\): rozkład przesunięty w okolice \\( -48 \\), z mniejszą różnorodnością wyników.  \n",
+    "  - Dla \\( N = 10 \\): rozkład jest skoncentrowany na \\( -10 \\) – 8 z 10 wędrówek kończy się wartością \\( -10 \\).  \n",
     "\n",
-    "N = 50 F_avg_p = -41.0\n",
+    "- **Dla \\( p = 0.05 \\):**  \n",
+    "  - Dla \\( N = 100 \\): najwięcej wędrówek kończy się w sąsiedztwie \\( -94 \\).  \n",
+    "  - Dla \\( N = 50 \\): koncentracja wokół \\( -46 \\).  \n",
+    "  - Dla \\( N = 10 \\): 6 z 10 wędrówek kończy się wartością \\( -10 \\).  \n",
     "\n",
-    "N = 10 F_avg_p = -8.2\n",
+    "- **Dla \\( p = 0.1 \\):**  \n",
+    "  - Dla \\( N = 100 \\): rozkłady skoncentrowane w pobliżu \\( -82 \\) i \\( -80 \\).  \n",
+    "  - Dla \\( N = 50 \\): koncentracja wokół \\( -46 \\) i \\( -44 \\).  \n",
+    "  - Dla \\( N = 10 \\): koncentracja na \\( -10 \\) z powodu małej liczby kroków.  \n",
     "\n",
+    "  ### Wnioski:\n",
+    "### Wnioski:\n",
+    "- **Wpływ \\( p \\):** Mniejsze \\( p \\) powoduje przesunięcie rozkładów w stronę mniejszych wartości. Mniejsze \\( p \\) powoduje przesunięcie rozkładów w stronę mniejszych wartości.\n",
+    "- **Wpływ \\( N \\):** Mniejsza liczba kroków powoduje skupienie rozkładów wokół najmnieszych możliwych wartości. \n",
     "\n",
-    "Patrząc na te dane w takiej postaci możemy nie widzieć jeszcze dokładnych zależności pomiędzy wartościami punktów końcowych dla różnych N przy tym samym p. Jednakże jesli użyjemy naszych N jako mianowników a wartości średnich punktów końcowych jako liczników w naszej nowo powstałej liczbie, wyniki będą prezentować się następująco:\n",
+    "### Rozrzut pozycji końcowych:\n",
+    "Rozrzut dla różnych parametrów \\( p \\) i \\( N \\) wynosi:  \n",
     "\n",
-    "• dla p = 0.025 :\n",
+    "- **Dla \\( p = 0.025 \\):**  \n",
+    "  - \\( N = 100 \\): \\( 12 \\), \\( N = 50 \\): \\( 6 \\), \\( N = 10 \\): \\( 2 \\)  \n",
     "\n",
-    "F_avg_p = -0.946\n",
+    "- **Dla \\( p = 0.05 \\):**  \n",
+    "  - \\( N = 100 \\): \\( 18 \\), \\( N = 50 \\): \\( 16 \\), \\( N = 10 \\): \\( 4 \\)  \n",
     "\n",
-    "F_avg_p = -0.964\n",
+    "- **Dla \\( p = 0.1 \\):**  \n",
+    "  - \\( N = 100 \\): \\( 17 \\), \\( N = 50 \\): \\( 12 \\), \\( N = 10 \\): \\( 4 \\)  \n",
     "\n",
-    "F_avg_p = -0.960\n",
+    "#### Procentowy rozrzut:\n",
+    "- **Dla \\( p = 0.025 \\):**  \n",
+    "  - \\( N = 100 \\): \\( 12\\% \\), \\( N = 50 \\): \\( 12\\% \\), \\( N = 10 \\): \\( 20\\% \\)  \n",
     "\n",
-    "• dla p = 0.05 :\n",
+    "- **Dla \\( p = 0.05 \\):**  \n",
+    "  - \\( N = 100 \\): \\( 18\\% \\), \\( N = 50 \\): \\( 32\\% \\), \\( N = 10 \\): \\( 40\\% \\)  \n",
     "\n",
-    "F_avg_p = -0.894\n",
+    "- **Dla \\( p = 0.1 \\):**  \n",
+    "  - \\( N = 100 \\): \\( 17\\% \\), \\( N = 50 \\): \\( 24\\% \\), \\( N = 10 \\): \\( 40\\% \\)  \n",
     "\n",
-    "F_avg_p = -0.890\n",
-    "\n",
-    "F_avg_p = -0.880\n",
-    "\n",
-    "\n",
-    "• dla p = 0.1 :\n",
-    "\n",
-    "F_avg_p = -0.802\n",
-    "\n",
-    "F_avg_p = -0.820\n",
-    "\n",
-    "F_avg_p = -0.820\n",
-    "\n",
-    "Mając wyniki w powyższej postaci, widzimy wyraźnie że średnie wartości punktów końcowych naszej symulacji przyjmują wartości:\n",
-    "\n",
-    "• dla p = 0.025 -> (-96 +/- 1.4) * 10^-2\n",
-    "\n",
-    "• dla p = 0.05 -> (-89 +/- 0.4) * 10^2\n",
-    "\n",
-    "• dla p = 0.1 -> (-82 +/- 1.8) * 10^2\n",
-    "\n",
-    "Rozkład pozycji końcowych dla p = 0.025 jest mocno skoncentrowany wokół najmniejszych wartości na histogramie ze względu na bardzo małe prawdopodobieństwa zrobienia kroku w górę (0.025, 0.05, 0.1). W przypadku liczby kroków N = 100 jest przesunięty w stronę wartości znajdujących się w bliskim sąsiedztwie -100, co oznacza że przy kolejnych powtórzeniach symulacji dla zadanych parametrów istnieje duże prawdopodobieństwo na zakończenie wędrówki w bliskim zakresie liczby -100. Dla N = 50 rozkład jest przesunięty w okolice pozycji -48, a ze względu na mniejszą liczbę kroków jego różnorodność jest mniejsza, niemniej jednak możemy wnioskować że przy kolejnym symulacjach również zakończylibyśmy wędrówkę w bliskim sąsiedztiwe tej wartości. Dla N = 10 rozkład jest najmocniej skoncentrowany na wartości -10, aż 8 z 10 wędrówek ma wartość końcową -10, co jest związane bezpośrednio z bardzo małą liczbą kroków oraz równie małym prawdodobieństwem kroku dodatniego. \n",
-    "Dla p = 0.05 i N = 100 najwięcej wędrówek przyjmowało wartości w bliskim sąsiedztwie liczby -94, dla N = 50 było to -46, a dla N = 10 rozkład był skoncentrowany na -10, 6 z 10 wędrówek miało wartość końcową równą -10. Rozkłady dla prawdopodobieństwa p = 0.1 wyglądały następująco, dla N = 100 skoncentrowane były w sąsiedztwie liczb -82 i -80, dla N = 50 były to wartości -46 i -44, a dla N = 10 nadal było to -10, ze względu na małą liczbę kroków. \n",
-    "\n",
-    "\n",
-    "Rozrzut pozycji końcowych dla różnych wartości p najlepiej przedstawiają histogramy przedstawione powyżej, z których możemy odczytać następujące informację:\n",
-    "\n",
-    "• dla p = 0.025 :\n",
-    "\n",
-    "Rozrzut przy N = 100 wynosił 12, przy N = 50 wynosił 6, przy N = 10 wynosił 2. \n",
-    "\n",
-    "• dla p = 0.05 :\n",
-    "\n",
-    "Rozrzut przy N = 100 wynosił 18, przy N = 50 wynosił 16, przy N = 10 wynosił 4.\n",
-    "\n",
-    "• dla p = 0.1 :\n",
-    "\n",
-    "Rozrzut przy N = 100 wynosił 17, przy N = 50 wynosił 12, przy N = 10 wynosił 4.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "### Wnioski:  \n",
+    "- **Wpływ \\( N \\):** Przy mniejszej liczbie kroków obserwujemy znacząco większy rozrzut pozycji końcowych, niezależnie od wartości \\( p \\)\n"
    ]
   }
  ],
