--- a/main.ipynb
+++ b/main.ipynb
@@ -49,7 +49,7 @@
     "W celu przeprowadzenia eksperymentu, tworzymy algorytm symulujący asymetryczną wędrówkę losową wzdłuż osi liczbowej. Funkcja `random_walk_simulation_1d` przyjmuje następujące parametry:\n",
     "\n",
     "- `N` - liczba kroków w wędrówce,\n",
-    "- `p` - prawdopodobieństwo ruchu w górę (wartość z zakresu \\(0 \\leq p \\leq 1\\)),\n",
+    "- `p` - prawdopodobieństwo ruchu w górę,\n",
     "- `M` - liczba trajektorii generowanych podczas symulacji.\n",
     "\n",
     "### Główne kroki algorytmu\n",
